--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -132,3 +132,31 @@ booktitle = {Geoinformaatika},
 pages = {125-182},
 year = {2019}
 }
+@article{Crameri2020,
+author = {Crameri, Fabio and Shephard, Grace E and Heron, Philip J},
+doi = {10.1038/s41467-020-19160-7},
+issn = {2041-1723},
+journal = {Nature Communications},
+keywords = {GISi kursus},
+mendeley-tags = {GISi kursus},
+number = {1},
+pages = {5444},
+title = {{The misuse of colour in science communication}},
+url = {https://doi.org/10.1038/s41467-020-19160-7},
+volume = {11},
+year = {2020}
+}
+@article{Thyng2020,
+author = {Thyng, Kristen M.},
+doi = {10.1109/MCSE.2020.3006946},
+issn = {1558366X},
+journal = {Computing in Science and Engineering},
+month = {sep},
+number = {5},
+pages = {96--102},
+publisher = {IEEE Computer Society},
+title = {{The Importance of Colormaps}},
+volume = {22},
+year = {2020}
+}
+
